--- a/src/components/main-bio.css
+++ b/src/components/main-bio.css
@@ -10,6 +10,13 @@
   margin-top: 0;
 }
 
+.avatar {
+  margin-bottom: 0;
+  min-width: 150px;
+  border-radius: 100%;
+  border: 8px solid var(--light-gray); 
+}
+
 .horizontal-links svg {
   width: 16px;
   height: 16px;
